Added candles chart, fixed some issues with duplicate price data and added nav menu.

--- a/notebooks/Data Quality.ipynb
+++ b/notebooks/Data Quality.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "64eb1e2b",
+   "metadata": {},
+   "source": [
+    "# Price data quality dashboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14968a9a",
    "metadata": {},
    "source": [
-    "# Imports and set up django environment"
+    "## Imports and set up django environment"
    ]
   },
   {
@@ -38,7 +46,7 @@
    "id": "0613cf50",
    "metadata": {},
    "source": [
-    "# Time ORM vs  Raw SQL\n",
+    "## Time ORM vs  Raw SQL\n",
     "Retrieve data into dsataframe. We need:\n",
     "* Symbol Name;\n",
     "* Instrument Type Name;\n",
